# auction-arbitrage-bot

./: .gitignore  Makefile  README.md  dev_shell.nix  flake.nix  main.py  net_conf.json  python-packages.nix  requirements.txt  shell.nix  test_runner.nix  test_runner_conf.nix
.github/workflows/: deploy.yml  test.yml
contracts/: astroport_factory.wasm  astroport_native_coin_registry.wasm  astroport_pair.wasm  astroport_pair_stable.wasm  astroport_whitelist.wasm  auction.wasm  auctions_manager.wasm  cw20_base.wasm  deployments.json  price_oracle.wasm
local-interchaintest/: Cargo.toml  Makefile  README.md  flake.nix  packages.nix
local-interchaintest/chains/: neutron_osmosis.json  neutron_osmosis_gaia.json
local-interchaintest/configs/: logs.json
local-interchaintest/keyring-test/: acc0.info  recovery_phrase.txt
local-interchaintest/src/: error.rs  fixtures.rs  lib.rs  main.rs  setup.rs  tests.rs  util.rs
local-interchaintest/tests/: transfer_neutron.py  transfer_osmosis.py
scripts/: start_neutron.sh  start_osmosis.sh  sync_neutron.sh  sync_osmo.sh
src/: db.py  scheduler.py  util.py
src/contracts/: auction.py  leg.py  route.py
src/contracts/pool/: astroport.py  osmosis.py  provider.py
src/strategies/: bellman_ford.py  naive.py  util.py
tests/: auction.py  pool.py  test_auction.py  test_naive_strategy.py  test_pool.py  test_poolfile.json  test_scheduler.py  test_strategy_util.py  test_util.py  util.py
