[package]
name = "local-interchaintest"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.5.5"
localic-std = { git = "https://github.com/strangelove-ventures/interchaintest.git", branch = "main" }
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
thiserror = "1.0.61"
serde_json = "1.0.117"
serde = "1.0.203"
rand = "0.8.5"
localic-utils = { git = "https://github.com/timewave-computer/localic-utils", branch = "dowlandaiello/feature-sharedrepo" }
notify = "6.1.1"
itertools = "0.13.0"